# finetune

./: .deptry.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  run_joke_cli.py  run_joke_generator.py
.cursor/rules/: package_management.mdc
.devcontainer/: devcontainer.json  github-ssh-setup.sh  postCreateCommand.sh
.github/workflows/: main.yml
docs/: index.md  modules.md
src/finetune/: routercheck.py  utils.py
src/pytemplate/: __init__.py  __main__.py  controller.py  model.py  presenter.py
tests/: test_foo.py  test_joke_mcp.py
